src/objects/Charket__WeChatAgent__c.object
<CustomObject>
    <fields>
        <fullName>Charket__ChatCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Chat Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charket__ChattingCount__c</fullName>
        <formula>IF(Charket__ChatCount__c - Charket__WaitingCount__c &gt; 0, Charket__ChatCount__c - Charket__WaitingCount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chatting Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charket__DNDEndTime__c</fullName>
        <label>DND End Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__DNDStartTime__c</fullName>
        <label>DND Start Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charket__IsAway__c</fullName>
        <formula>OR(!Charket__IsActive__c, ISPICKVAL(Charket__Status__c, &apos;Offline&apos;), (now() - Charket__LastOnlineTime__c)*24*60 &gt;= 6,  ISBLANK(Charket__LastOnlineTime__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Away</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charket__IsDesktopNotificationsEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Desktop Notifications Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charket__IsDoNotDisturbEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Disturb Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charket__IsEmailNotificationsEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Email Notifications Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charket__IsMobileNotificationsEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Mobile Notifications Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charket__IsiOSAway__c</fullName>
        <formula>OR(!Charket__IsActive__c, ISBLANK(Charket__LastiOSActiveTime__c), (NOW() -  Charket__LastiOSActiveTime__c)*24*60 &gt; 1, Charket__LastiOSInactiveTime__c &gt; Charket__LastiOSActiveTime__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>iOS Away</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charket__LastChatCompletedTime__c</fullName>
        <label>Last Chat Completed Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Charket__LastManualStatus__c</fullName>
        <label>Last Manual Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Offline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charket__LastOnlineTime__c</fullName>
        <label>Last Online Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Charket__LastiOSActiveTime__c</fullName>
        <label>Last iOS Online Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Charket__LastiOSInactiveTime__c</fullName>
        <label>Last iOS Offline Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Charket__ProfilePhotoUrl__c</fullName>
        <label>Profile Photo URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Offline</fullName>
                    <default>true</default>
                    <label>Offline</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charket__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WeChatAgents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charket__WaitingCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Waiting Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatAccount__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>WeChat Account</label>
        <referenceTo>Charket__WeChatAccount__c</referenceTo>
        <relationshipLabel>WeChat Agents</relationshipLabel>
        <relationshipName>WeChatAgents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatId__c</fullName>
        <externalId>true</externalId>
        <label>WeChat ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatProfilePhotoUrl__c</fullName>
        <label>WeChat Profile Photo URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatUsername__c</fullName>
        <label>WeChat Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>WeChat Agent</label>
    <listViews>
        <fullName>Charket__All</fullName>
        <columns>NAME</columns>
        <columns>Charket__ChatCount__c</columns>
        <columns>Charket__Status__c</columns>
        <columns>Charket__User__c</columns>
        <columns>Charket__WeChatAccount__c</columns>
        <columns>Charket__IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Agent Nickname</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WeChat Agents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>